--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
             {% endif %}
         {% endfor %}
         <div class="btn-more text-right">
-            <a class="btn btn-default btn-xs twitchy-background" href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}">
+            <a class="btn btn-primary btn-xs twitchy-background" href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}">
                 View all Articles ...
             </a>
         </div>
