--- a/templates/base.html
+++ b/templates/base.html
@@ -310,7 +310,7 @@
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
-            <div class="container-fluid">
+            <div class="container">
                 {% block precontent scoped %}
                 {% endblock %}
                 {% block content scoped %}
